fix: using correct parameter and update doc
